# w4orocos

./: LICENSE  Makefile  README.md
app/orocos/: Makefile
app/orocos/demo.oro/: CMakeLists.txt
app/orocos/demo.oro/src/: components.cpp  components.hpp  main.cpp  start.ops
cfg/alph/: orocos.alph
cfg/prj/: orocos-qemu-leon3.prj
lib/orocos/: Makefile
mk/: test.sh
